waiting function enhancement